// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyCard falsy userId snapshot 1`] = `
<DocumentFragment>
  <div
    class="property-card"
  >
    <img
      alt="property"
      class="property-card__image"
      src="card.png"
    />
    <h2>
      2 bed flat
    </h2>
    <p>
      flat - Leeds
    </p>
    <div
      class="property-card__rooms"
    >
      <div
        class="property-card__rooms__room"
      >
        <img
          alt="bathrooms"
          class="property-card__icon"
          src="bath.png"
        />
        <p>
          1
        </p>
      </div>
      <div
        class="property-card__rooms__room"
      >
        <img
          alt="bedrooms"
          class="property-card__icon"
          src="bed.png"
        />
        <p>
          2
        </p>
      </div>
    </div>
    <p
      class="property-card__price"
    >
      £ 5000.00
    </p>
    <a
      class="property-card__email"
      href="mailto:not.real@email.com"
    >
      <img
        alt="email"
        class="property-card__icon"
        src="email.png"
      />
      <p>
        Email
      </p>
    </a>
  </div>
</DocumentFragment>
`;

exports[`PropertyCard truthy userId and favouriteId snapshot 1`] = `
<DocumentFragment>
  <div
    class="property-card"
  >
    <img
      alt="property"
      class="property-card__image"
      src="card.png"
    />
    <h2>
      2 bed flat
    </h2>
    <p>
      flat - Leeds
    </p>
    <div
      class="property-card__rooms"
    >
      <div
        class="property-card__rooms__room"
      >
        <img
          alt="bathrooms"
          class="property-card__icon"
          src="bath.png"
        />
        <p>
          1
        </p>
      </div>
      <div
        class="property-card__rooms__room"
      >
        <img
          alt="bedrooms"
          class="property-card__icon"
          src="bed.png"
        />
        <p>
          2
        </p>
      </div>
    </div>
    <p
      class="property-card__price"
    >
      £ 5000.00
    </p>
    <a
      class="property-card__email"
      href="mailto:not.real@email.com"
    >
      <img
        alt="email"
        class="property-card__icon"
        src="email.png"
      />
      <p>
        Email
      </p>
    </a>
    <button
      class="remove-property"
      type="button"
    >
      <span>
        Saved
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`PropertyCard truthy userId snapshot 1`] = `
<DocumentFragment>
  <div
    class="property-card"
  >
    <img
      alt="property"
      class="property-card__image"
      src="card.png"
    />
    <h2>
      2 bed flat
    </h2>
    <p>
      flat - Leeds
    </p>
    <div
      class="property-card__rooms"
    >
      <div
        class="property-card__rooms__room"
      >
        <img
          alt="bathrooms"
          class="property-card__icon"
          src="bath.png"
        />
        <p>
          1
        </p>
      </div>
      <div
        class="property-card__rooms__room"
      >
        <img
          alt="bedrooms"
          class="property-card__icon"
          src="bed.png"
        />
        <p>
          2
        </p>
      </div>
    </div>
    <p
      class="property-card__price"
    >
      £ 5000.00
    </p>
    <a
      class="property-card__email"
      href="mailto:not.real@email.com"
    >
      <img
        alt="email"
        class="property-card__icon"
        src="email.png"
      />
      <p>
        Email
      </p>
    </a>
    <button
      class="save-property"
      type="button"
    >
      Save
    </button>
  </div>
</DocumentFragment>
`;
